[tool.poetry]
name = "restrun"
version = "0.1.0"
description = ""
authors = ["yassun7010 <yassun7010@outlook.com>"]
readme = "README.md"

[tool.poetry.scripts]
restrun = "restrun.__main__:main"

[tool.taskipy.tasks]
test = "pytest"
format = "black ."
lint = "pyright restrun/** tests/**"
generate-config-jsonschema = "python scripts/generate_config_jsonschema.py > schemas/config.schema.json"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.2.1"
typer = { extras = ["all"], version = "^0.9.0" }
jinja2 = "^3.1.2"
ruff = "^0.0.286"
black = "^23.7.0"
authlib = "^1.2.1"
httpx = "^0.24.1"
pyyaml = "^6.0.1"
rich-argparse = "^1.3.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
pytest = "^7.4.0"
pyright = "^1.1.324"
taskipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pyright]
exclude = ["**/__pycache__"]
reportPrivateImportUsage = "none"
reportUnusedImport = true

[tool.ruff]
